--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ env_logger = {version ="0.11.3"}
 rfd = {version ="0.14.1"}
 tokio = {version = "1.38.0", features = ["fs"]}
 uuid = {version = "1.9.1", features =["v4", "fast-rng"]}
+dirs = {version = "5.0.1"}
+serde = {version ="1.0.203"}
+serde_json = {version = "1.0.120"}
