--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 eframe = {version ="0.28"}
-egui_extras = {version ="0.28"}
+egui_extras = {version ="0.28", features=["all_loaders"]}
+image = {version = "0.25.1", features = ["jpeg" , "png"]}
 env_logger = {version ="0.11.3"}
 rfd = {version ="0.14.1"}
 tokio = {version = "1.38.0", features = ["fs"]}
