--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-eframe = {version ="0.28"}
-egui_extras = {version ="0.28", features=["all_loaders"]}
+egui = {version = "0.28.1"}
+eframe = {version ="0.28.1", features = ["persistence"]}
+egui_extras = {version ="0.28.1", features=["all_loaders"]}
 image = {version = "0.25.1", features = ["jpeg" , "png"]}
 env_logger = {version ="0.11.3"}
 rfd = {version ="0.14.1"}
