--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 egui = {version = "0.28.1"}
-eframe = {version ="0.28.1", features = ["persistence"]}
+eframe = {version ="0.28.1"}
 egui_extras = {version ="0.28.1", features=["all_loaders"]}
 image = {version = "0.25.1", features = ["jpeg" , "png"]}
 env_logger = {version ="0.11.3"}
