--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 egui = {version = "0.28.1"}
 eframe = {version ="0.28.1"}
-egui_extras = {version ="0.28.1", features=["all_loaders"]}
+egui_extras = {version ="0.28.1", features=["all_loaders","datepicker"]}
 egui_dnd = {version="0.9.0"}
 image = {version = "0.25.1", features = ["jpeg" , "png", "webp"]}
 env_logger = {version ="0.11.3"}
@@ -16,3 +16,4 @@ dirs = {version = "5.0.1"}
 serde = {version ="1.0.203"}
 serde_json = {version = "1.0.120"}
 rand = {version = "0.8.5"}
+chrono = {version = "0.4.38"}
