--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ egui = {version = "0.28.1"}
 eframe = {version ="0.28.1"}
 egui_extras = {version ="0.28.1", features=["all_loaders"]}
 egui_dnd = {version="0.9.0"}
+egui_demo_lib = {version="0.28.1"}
 image = {version = "0.25.1", features = ["jpeg" , "png", "webp"]}
 env_logger = {version ="0.11.3"}
 rfd = {version ="0.14.1"}
